--- a/src/components/box/box.less
+++ b/src/components/box/box.less
@@ -46,7 +46,7 @@
 // ========
 
 .box__header {
-    @h5();
+    .mixin-h5;
     margin: 0;
     padding: .5rem 1rem;
     background: @color-base-25;
