--- a/src/components/button/button-flat.less
+++ b/src/components/button/button-flat.less
@@ -37,7 +37,7 @@
 
 .btn--flat.btn--primary {
     .constr-btnFlat(
-        @txtColor: @color-primary-25,
+        @txtColor: @color-white,
         @bgColor: @color-primary-10,
         @bgColorHover: @color-primary-9,
         @bgColorActive: @color-primary-8
@@ -55,7 +55,7 @@
 
 .btn--flat.btn--dark {
     .constr-btnFlat(
-        @txtColor: @color-base-25,
+        @txtColor: @color-white,
         @bgColor: @color-base-10,
         @bgColorHover: @color-base-9,
         @bgColorActive: @color-base-8
@@ -64,7 +64,7 @@
 
 .btn--flat.btn--attention {
     .constr-btnFlat(
-        @txtColor: @color-attention-8,
+        @txtColor: @color-attention-6,
         @bgColor: @color-attention-20,
         @bgColorHover: @color-attention-19,
         @bgColorActive: @color-attention-18
@@ -73,7 +73,7 @@
 
 .btn--flat.btn--negative {
     .constr-btnFlat(
-        @txtColor: @color-negative-5,
+        @txtColor: @color-negative-6,
         @bgColor: @color-negative-17,
         @bgColorHover: @color-negative-16,
         @bgColorActive: @color-negative-15
@@ -82,7 +82,7 @@
 
 .btn--flat.btn--positive {
     .constr-btnFlat(
-        @txtColor: @color-positive-5,
+        @txtColor: @color-positive-6,
         @bgColor: @color-positive-18,
         @bgColorHover: @color-positive-17,
         @bgColorActive: @color-positive-16
