--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -205,12 +205,12 @@
         @bgGradientTopColor: @color-primary-13,
         @bgGradientBottomColor: @color-primary-11,
         @borderColor: @color-primary-10,
-        @txtColor: @color-primary-25,
+        @txtColor: @color-white,
         @highlightColor: @color-primary-14,
         @bgGradientTopColorHover: @color-primary-11,
         @bgGradientBottomColorHover: @color-primary-9,
         @borderColorHover: @color-primary-6,
-        @txtColorHover: @color-primary-25,
+        @txtColorHover: @color-white,
         @highlightColorHover: @color-primary-13,
         @bgGradientTopColorActive: @color-primary-6,
         @bgGradientBottomColorActive: @color-primary-9,
@@ -245,12 +245,12 @@
         @bgGradientTopColor: @color-base-12,
         @bgGradientBottomColor: @color-base-10,
         @borderColor: @color-base-9,
-        @txtColor: @color-base-25,
+        @txtColor: @color-white,
         @highlightColor: @color-base-13,
         @bgGradientTopColorHover: @color-base-10,
         @bgGradientBottomColorHover: @color-base-8,
         @borderColorHover: @color-base-5,
-        @txtColorHover: @color-base-25,
+        @txtColorHover: @color-white,
         @highlightColorHover: @color-base-12,
         @bgGradientTopColorActive: @color-base-5,
         @bgGradientBottomColorActive: @color-base-8,
@@ -265,12 +265,12 @@
         @bgGradientTopColor: @color-attention-21,
         @bgGradientBottomColor: @color-attention-19,
         @borderColor: @color-attention-18,
-        @txtColor: @color-attention-8,
+        @txtColor: @color-attention-6,
         @highlightColor: @color-attention-22,
         @bgGradientTopColorHover: @color-attention-20,
         @bgGradientBottomColorHover: @color-attention-19,
         @borderColorHover: @color-attention-16,
-        @txtColorHover: @color-attention-8,
+        @txtColorHover: @color-attention-6,
         @highlightColorHover: @color-attention-22,
         @bgGradientTopColorActive: @color-attention-18,
         @bgGradientBottomColorActive: @color-attention-21,
@@ -305,12 +305,12 @@
         @bgGradientTopColor: @color-positive-21,
         @bgGradientBottomColor: @color-positive-19,
         @borderColor: @color-positive-18,
-        @txtColor: @color-positive-8,
+        @txtColor: @color-positive-7,
         @highlightColor: @color-positive-22,
         @bgGradientTopColorHover: @color-positive-20,
         @bgGradientBottomColorHover: @color-positive-18,
         @borderColorHover: @color-positive-17,
-        @txtColorHover: @color-positive-8,
+        @txtColorHover: @color-positive-7,
         @highlightColorHover: @color-positive-21,
         @bgGradientTopColorActive: @color-positive-18,
         @bgGradientBottomColorActive: @color-positive-21,
@@ -508,7 +508,6 @@
     }
 
     &:hover {
-        
         background: linear-gradient(to bottom, @bgGradientTopColorHover, @bgGradientBottomColorHover);
         border-color: @borderColorHover;
         box-shadow: 0 1px 0 @highlightColorHover inset;
