--- a/src/less/core/root.less
+++ b/src/less/core/root.less
@@ -7,12 +7,10 @@ html {
 }
 
 body {
-    @rootType();
+    .mixin-rootType;
     background: @bodyBackgroundColor;
     color: @textColor;
 }
-
-//
 
 ::selection {
     background: @color-primary-15;
