--- a/src/less/utilities/interface.less
+++ b/src/less/utilities/interface.less
@@ -2,24 +2,24 @@
 
 // text selection
 
-.slct-none { .mixin-userSelectNone !important; }
+.slt-none { .mixin-userSelectNone !important; }
 
 // pointer events
 
-.pntr-auto { pointer-events: auto !important; }
-.pntr-none { pointer-events: none !important; }
+.ptr-auto { pointer-events: auto !important; }
+.ptr-none { pointer-events: none !important; }
 
 // scroll
 
-.scrl-x,
-.scrl-y {
-    overflow: hidden !important;
+.scr-x,
+.scr-y {
+    //overflow: hidden !important;
     -webkit-overflow-scrolling: touch !important;
     -ms-overflow-style: -ms-autohiding-scrollbar !important;
 }
 
-.scrl-x { overflow-x: auto !important; }
-.scrl-y { overflow-y: auto !important; }
+.scr-x { overflow-x: auto !important; }
+.scr-y { overflow-y: auto !important; }
 
 // focus
 
