--- a/src/less/utilities/typography-base.less
+++ b/src/less/utilities/typography-base.less
@@ -2,38 +2,38 @@
 
 // headings
 
-.h1 { @h1(); }
-.h2 { @h2(); }
-.h3 { @h3(); }
-.h4 { @h4(); }
-.h5 { @h5(); }
-.h6 { @h6(); }
+.h1 { .mixin-h1 !important; }
+.h2 { .mixin-h2 !important; }
+.h3 { .mixin-h3 !important; }
+.h4 { .mixin-h4 !important; }
+.h5 { .mixin-h5 !important; }
+.h6 { .mixin-h6 !important; }
 
 // font-size
 
-.fs-0 { font-size: 0 !important; }
-.fs-1 { font-size: 1rem !important; }
-.fs-2 { font-size: 1.5rem !important; }
-.fs-3 { font-size: 2rem !important; }
-.fs-4 { font-size: 2.5rem !important; }
-.fs-5 { font-size: 3rem !important; }
-.fs-6 { font-size: 3.5rem !important; }
-.fs-7 { font-size: 4rem !important; }
-.fs-8 { font-size: 4.5rem !important; }
-.fs-9 { font-size: 5rem !important; }
+.fs-0 { .mixin-fs-0 !important; }
+.fs-1 { .mixin-fs-1 !important; }
+.fs-2 { .mixin-fs-2 !important; }
+.fs-3 { .mixin-fs-3 !important; }
+.fs-4 { .mixin-fs-4 !important; }
+.fs-5 { .mixin-fs-5 !important; }
+.fs-6 { .mixin-fs-6 !important; }
+.fs-7 { .mixin-fs-7 !important; }
+.fs-8 { .mixin-fs-8 !important; }
+.fs-9 { .mixin-fs-9 !important; }
 
 // line-height
 
-.lh-0 { line-height: 0 !important; }
-.lh-1 { line-height: 1rem !important; }
-.lh-2 { line-height: 1.5rem !important; }
-.lh-3 { line-height: 2rem !important; }
-.lh-4 { line-height: 2.5rem !important; }
-.lh-5 { line-height: 3rem !important; }
-.lh-6 { line-height: 3.5rem !important; }
-.lh-7 { line-height: 4rem !important; }
-.lh-8 { line-height: 4.5rem !important; }
-.lh-9 { line-height: 5rem !important; }
+.lh-0 { .mixin-lh-0 !important; }
+.lh-1 { .mixin-lh-1 !important; }
+.lh-2 { .mixin-lh-2 !important; }
+.lh-3 { .mixin-lh-3 !important; }
+.lh-4 { .mixin-lh-4 !important; }
+.lh-5 { .mixin-lh-5 !important; }
+.lh-6 { .mixin-lh-6 !important; }
+.lh-7 { .mixin-lh-7 !important; }
+.lh-8 { .mixin-lh-8 !important; }
+.lh-9 { .mixin-lh-9 !important; }
 
 // font family
 
