--- a/src/components/headings/headings.less
+++ b/src/components/headings/headings.less
@@ -1,8 +1,8 @@
 /** headings.less */
 
-h1 { @h1(); }
-h2 { @h2(); }
-h3 { @h3(); }
-h4 { @h4(); }
-h5 { @h5(); }
-h6 { @h6(); }
+h1 { .mixin-h1; }
+h2 { .mixin-h2; }
+h3 { .mixin-h3; }
+h4 { .mixin-h4; }
+h5 { .mixin-h5; }
+h6 { .mixin-h6; }
