--- a/src/less/utilities/sizing-base.less
+++ b/src/less/utilities/sizing-base.less
@@ -40,12 +40,12 @@
     .generate_width_height((@i - 1));
 
     .w-@{i} {
-        width:  1rem * @i !important;
+        width:  @sizingMultiplicand * @i !important;
         box-sizing: border-box !important;
     }
 
     .h-@{i} {
-        height: 1rem * @i !important;
+        height: @sizingMultiplicand * @i !important;
         box-sizing: border-box !important;
     }
 
