--- a/src/less/utilities/sizing-responsive.less
+++ b/src/less/utilities/sizing-responsive.less
@@ -39,8 +39,8 @@
 
     .generate_width_height (@i) when (@i > 0) {
         .generate_width_height((@i - 1));
-        .@{bpPrefix}--w-@{i} { width:  1rem * @i !important; }
-        .@{bpPrefix}--h-@{i} { height: 1rem * @i !important; }
+        .@{bpPrefix}--w-@{i} { width:  @sizingMultiplicand * @i !important; }
+        .@{bpPrefix}--h-@{i} { height: @sizingMultiplicand * @i !important; }
     }
     .generate_width_height(@responsiveSizingSteps);
 
