--- a/src/less/utilities/layout-responsive.less
+++ b/src/less/utilities/layout-responsive.less
@@ -118,9 +118,9 @@
 @media @bp-only-l { .responsive-layout(only-l) }
 
 @media @bp-l {
-    .center {
+    .center-lr {
         padding: 0 !important;
-        width: 96rem !important;
+        width: @maximumPageCenterWidth !important;
     }
 }
 
