--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -10,6 +10,10 @@
     padding: 0;
     position: relative;
     text-align: center;
+    
+    &:focus {
+        box-shadow: none;
+    }
 
     &, * {
         .mixin-userSelectNone;
