fix responsive typography

--- a/src/less/utilities/typography-responsive.less
+++ b/src/less/utilities/typography-responsive.less
@@ -4,29 +4,29 @@
 
     // font-size
 
-    .@{bpPrefix}--fs-0 { @fs-0() !important; }
-    .@{bpPrefix}--fs-1 { @fs-1() !important; }
-    .@{bpPrefix}--fs-2 { @fs-2() !important; }
-    .@{bpPrefix}--fs-3 { @fs-3() !important; }
-    .@{bpPrefix}--fs-4 { @fs-4() !important; }
-    .@{bpPrefix}--fs-5 { @fs-5() !important; }
-    .@{bpPrefix}--fs-6 { @fs-6() !important; }
-    .@{bpPrefix}--fs-7 { @fs-7() !important; }
-    .@{bpPrefix}--fs-8 { @fs-8() !important; }
-    .@{bpPrefix}--fs-9 { @fs-9() !important; }
+    .@{bpPrefix}--fs-0 { .fs-0; }
+    .@{bpPrefix}--fs-1 { .fs-1; }
+    .@{bpPrefix}--fs-2 { .fs-2; }
+    .@{bpPrefix}--fs-3 { .fs-3; }
+    .@{bpPrefix}--fs-4 { .fs-4; }
+    .@{bpPrefix}--fs-5 { .fs-5; }
+    .@{bpPrefix}--fs-6 { .fs-6; }
+    .@{bpPrefix}--fs-7 { .fs-7; }
+    .@{bpPrefix}--fs-8 { .fs-8; }
+    .@{bpPrefix}--fs-9 { .fs-9; }
 
     // line-height
 
-    .@{bpPrefix}--lh-0 { @lh-0() !important; }
-    .@{bpPrefix}--lh-1 { @lh-1() !important; }
-    .@{bpPrefix}--lh-2 { @lh-2() !important; }
-    .@{bpPrefix}--lh-3 { @lh-3() !important; }
-    .@{bpPrefix}--lh-4 { @lh-4() !important; }
-    .@{bpPrefix}--lh-5 { @lh-5() !important; }
-    .@{bpPrefix}--lh-6 { @lh-6() !important; }
-    .@{bpPrefix}--lh-7 { @lh-7() !important; }
-    .@{bpPrefix}--lh-8 { @lh-8() !important; }
-    .@{bpPrefix}--lh-9 { @lh-9() !important; }
+    .@{bpPrefix}--lh-0 { .lh-0; }
+    .@{bpPrefix}--lh-1 { .lh-1; }
+    .@{bpPrefix}--lh-2 { .lh-2; }
+    .@{bpPrefix}--lh-3 { .lh-3; }
+    .@{bpPrefix}--lh-4 { .lh-4; }
+    .@{bpPrefix}--lh-5 { .lh-5; }
+    .@{bpPrefix}--lh-6 { .lh-6; }
+    .@{bpPrefix}--lh-7 { .lh-7; }
+    .@{bpPrefix}--lh-8 { .lh-8; }
+    .@{bpPrefix}--lh-9 { .lh-9; }
 
     // text alignment
 
